--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "~1.15.2",
     "connect-mongo": "^1.3.2",
     "connect-multiparty": "^2.0.0",
